--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,14 @@ output:
       toc_depth: 2
 ---
 
+# Motivation
 
-Getting Carlota up to speed with R using dose-response for 32 drugs against 6
+Getting up to speed with R using dose-response for 32 drugs against 6
 bacterial strains.
+
+
+# Tasks
+
+1. Plot raw OD growth curves. [Input data](doc/tasks/01_dat.csv) and expected
+   [output plot](doc/tasks/01_out.pdf) are provided. The data is for azithromycin
+   against _S. flexneri_ M90T from day 2022-05-04 (first replicate).
