--- a/README.Rmd
+++ b/README.Rmd
@@ -23,9 +23,10 @@ to both steps is visualization i.e. making graphs.
 
 ## Explore
 
-1. Plot raw OD growth curves. [Input data](doc/tasks/01_dat.csv) and expected
-   [output plot](doc/tasks/01_out.pdf) are provided. The data is for azithromycin
-   against _S. flexneri_ M90T from day 2022-05-04 (first replicate).
+1. Plot growth curves following raw OD in time. [Input
+   data](doc/tasks/01_dat.csv) and expected [output
+   plot](doc/tasks/01_out.pdf) are provided. The data is for azithromycin
+   against _S. flexneri_ M90T from day 2022-05-04 (first replicate). _A tip: Use `facet_wrap` with `ncol = 1` argument to have different concentrations on separate plots._
 
 2. Try again, now with [data](doc/tasks/02_dat.csv) from two days. In addition,
    transform the y-axis to logarithmic scale. [Expected output](doc/tasks/02_out.pdf).
