--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ bacterial strains.
 # Tasks
 
 In the following, we go through the most common steps in data analysis:
-exploration and transformation (to derive new variables). Integral to both
+exploration and transformation (i.e. deriving new variables). Integral to both
 steps is visualization i.e. making graphs.
 
 ## Explore
@@ -37,7 +37,5 @@ steps is visualization i.e. making graphs.
 3. Once more, now with [data](doc/tasks/03_dat.csv) from three days. Expected
    [output](doc/tasks/03_out.pdf). You will encounter an issue because there
    were two biological replicates on that day. There are multiple ways to
-   overcome this, but for now, I recommend to solve by issuing `group =
-   WellID` to `aes` of `ggplot`.
    overcome this, but for now, I recommend to solve by using `group` parameter 
    of `aes` e.g. `ggplot(aes(..., group = Plt))`.
