--- a/README.Rmd
+++ b/README.Rmd
@@ -26,8 +26,7 @@ steps is visualization i.e. making graphs.
 1. Plot growth curves following raw OD in time. Input
    [data](doc/tasks/01_dat.csv) and expected [output](doc/tasks/01_out.pdf)
    plot are provided. The data is for azithromycin against _S. flexneri_ M90T
-   from day 2022-05-04 (first replicate). _A tip: Use `facet_wrap` with `ncol
-   = 1` argument to have different concentrations on separate plots._
+   from day 2022-05-04 (first replicate). _A tip: Use `facet_wrap` with `ncol = 1` argument to have different concentrations on separate plots._
 
 2. Try again, now with [data](doc/tasks/02_dat.csv) from two days (let us plot
    days in different color). In addition, transform the y-axis to logarithmic
