Add fourth task

--- a/README.Rmd
+++ b/README.Rmd
@@ -49,3 +49,25 @@ control i.e. you know now that there is nothing extra suspicious goin on. Raw OD
    were two biological replicates on third day. There are multiple ways to
    overcome this, but for now, I recommend to solve by using `group` parameter 
    of `aes` e.g. `ggplot(aes(..., group = Plt))`.
+
+## Transform
+
+To quantify the growth (either rate or yield) one needs to substract the
+background from raw OD. There are two ways to do that: 1) using a readout from
+just the medium; 2) using the smallest value per well (across the time). I
+prefer to use the former whenever possible.
+
+3. Add an `OD` variable to your dataframe for background subtracted OD. You
+   need two things: 1) to `group` the data and 2) a way to point to background
+   wells. Since grouping takes a bit practice until it becomes easy, I will
+   just say that you need to subtract background on each day, on each plate,
+   in each timepoint. The wells with no bacteria were encoded to have `uM =
+   -1` i.e. after appropriate grouping it comes down to: `OD = OD/OD[uM ==
+   -1]`. Input [data](doc/tasks/03_dat.csv) is the same as in step 3 above.
+   And output should look like shown below (first six rows and only subset of columns shown).
+
+```{r}
+read_csv('doc/tasks/04_out.csv') %>% 
+  select(Date:Well, Time_h, RawOD, uM, OD)
+```
+
