--- a/README.Rmd
+++ b/README.Rmd
@@ -54,8 +54,9 @@ control i.e. you know now that there is nothing extra suspicious goin on. Raw OD
 
 To quantify the growth (either rate or yield) one needs to substract the
 background from raw OD. There are two ways to do that: 1) using a readout from
-just the medium; 2) using the smallest value per well (across the time). I
-prefer to use the former whenever possible.
+just the medium; 2) using the smallest value per well (i.e. OD in one of the
+first timepoints of a particular well). I prefer to use the former whenever
+possible.
 
 3. Add an `OD` variable to your dataframe for background subtracted OD. You
    need two things: 1) to `group` the data and 2) a way to point to background
