Task 4, switch to input data output plot scheme
It will help you motivate next step

--- a/README.Rmd
+++ b/README.Rmd
@@ -64,11 +64,6 @@ possible.
    just say that you need to subtract background on each day, on each plate,
    in each timepoint. The wells with no bacteria were encoded to have `uM =
    -1` i.e. after appropriate grouping it comes down to: `OD = OD/OD[uM ==
-   -1]`. Input [data](doc/tasks/03_dat.csv) is the same as in step 3 above.
-   And output should look like shown below (first six rows and only subset of columns shown).
-
-```{r}
-read_csv('doc/tasks/04_out.csv') %>% 
-  select(Date:Well, Time_h, RawOD, uM, OD)
-```
+   -1]`. Input [data](doc/tasks/03_dat.csv) (the same as in step 3 above).
+   And if you now plot everything exactly as in step 3 above, except having OD on y-axis, here's what [output](doc/tasks/04_out.pdf) should look like.
 
