--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ steps is visualization i.e. making graphs.
 ## Explore
 
 As a first look, the exploratory plots are informative and serve as a quality
-control i.e. you know now that there is nothing extra suspicious going on. Raw OD will suffice for that.
+control i.e. you check that there is nothing extra suspicious going on. Raw OD will suffice for that.
 
 1. Plot growth curves following raw OD in time. Input
    [data](doc/tasks/01_dat.csv) and expected [output](doc/tasks/01_out.pdf)
