--- a/README.Rmd
+++ b/README.Rmd
@@ -116,9 +116,10 @@ Good, filtering for `Time_h` between 9.5 and 10.5 h gives a desired result.
    ![](doc/tasks/07_out.png){width=60%}
 
 
-8. Now we fit a curve to this data. We use some equation that describes the
-   curve which is clearly not linear. We cannot avoid a little bit theory/math
-   here. Looks more complicated than it is, please read about the basics of a
-   four parameter logistic regression [4PL](doc/4pl.md). We have to make one
-   more brief detour into [formula interface](doc/formulaR.md), very powerful
-   and indispensable tool for modelling in R.
+8. Now we fit a curve to this data. We have to use some equation that describes
+   the curve which is clearly not linear. We cannot avoid a little bit
+   background here. Looks more complicated than it is, please read about:
+
+   - The basics of a four parameter logistic regression [4PL](doc/4pl.md)
+   - [Formula interface](doc/formulaR.md), a very powerful and indispensable
+     tool for modelling in R.
