--- a/README.Rmd
+++ b/README.Rmd
@@ -123,3 +123,5 @@ Good, filtering for `Time_h` between 9.5 and 10.5 h gives a desired result.
    - The basics of a four parameter logistic regression [4PL](doc/4pl.md)
    - [Formula interface](doc/formulaR.md), a very powerful and indispensable
      tool for modelling in R.
+   - Introduction to [drc](doc/drc.md) package, a dedicated package for
+     DoseResponseCurves that allows one to fit them in no time.
