--- a/README.Rmd
+++ b/README.Rmd
@@ -130,3 +130,7 @@ Good, filtering for `Time_h` between 9.5 and 10.5 h gives a desired result.
     
    ![](doc/tasks/08_out.png){width=60%}
 
+9. Finally. Let us propose the MIC is the concentration at which the
+   azithromycin excerts 95% effect. Can you calculate that with confidence
+   intervals?
+
