--- a/README.Rmd
+++ b/README.Rmd
@@ -104,7 +104,7 @@ score the effect of a drug (fitness is maximally affected there for
 concentrations/replicates). Let's check the closest timepoints to 10h:
  
 ```{r echo=T}
-filter(dat, Time_h < 10.5, Time_h > 9.5) %>%
+filter(dat, Time_h > 9.5, Time_h < 10.5) %>%
    count(Time_h)
 ```
 
@@ -126,7 +126,7 @@ Good, filtering for `Time_h` between 9.5 and 10.5 h gives a desired result.
    - Introduction to [drc](doc/drc.md) package, a dedicated package for
      DoseResponseCurves that allows one to fit them in no time.
   
-   After all this reading, one must be hyngry for data analysis. Load `drc` library and see if you can make the plot below. There is one issue: `drm` does not know how to handle `uM = -1` --  not a real concentration anyways, encoding we used for background control --  so get rid of that before fitting.
+   After all this reading, one must be hyngry for data analysis. Load `drc` library and see if you can make the plot below. There is one issue though: `drm` does not know how to handle `uM = -1` --  not a real concentration anyways, encoding we used for background control --  so get rid of that before fitting.
     
    ![](doc/tasks/08_out.png){width=60%}
 
