--- a/README.Rmd
+++ b/README.Rmd
@@ -135,15 +135,16 @@ Good, filtering for `Time_h` between 9.5 and 10.5 h gives a desired result.
    intervals?
 
 10. There is one more thing. An intricacy. We have fitted and plotted (i.e.
-    think about it) the `x`, the concentration, in logarithmic scale, but the
+    think about) the `x`, the concentration, in logarithmic scale, but the
     IC~50~ is in linear scale. Mostly, it does not matter much. You can see
     above, however, that the lower confidence interval is 5x lower than IC~95~
-    and the upper limit is less than 2x higher. One side is 5 away, the other
+    and the upper limit is less than 2x higher. One side is 5x away, the other
     less than 2x. To fix that, one could estimate IC~50~ in log scale
     (substitute IC~50~ in the 4-parameter logistic regression with
     log(IC~50~)). One might have to take some time to think about it what that means. Luckily, `drm` makes all this easy. You fit the model exactly as
     you did before, but this time, set `fct` to `LL2.4()`. Finally, when
-    calculating MIC, the confidence interval should be set to "fls" (`interval
-    = "fls"`). 
+    calculating MIC, the confidence interval should be set to "fls" 
+    (`interval = "fls"`). 
 
-    Now the MIC (IC~95~) should be the same (33 µM), but the confidence interval are symmetric, about 2x lower and 2x higher.
+    Now the MIC (IC~95~) should be the same you got with `LL.4` (33 µM), but
+    the confidence intervals are symmetric, about 2x lower and 2x higher.
