--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,9 @@ output:
       toc_depth: 2
 ---
 
+
+[[_TOC_]]
+
 # Motivation
 
 Getting up to speed with R using dose-response for 32 drugs against 6
