--- a/doc/growthrates.Rmd
+++ b/doc/growthrates.Rmd
@@ -72,6 +72,8 @@ We can see how the fit looks like by plotting
 par(mfrow=c(1, 2))
 plot(mod1, log='y')
 ```
+   
+   ![](doc/tasks/growthrates_loglinear.png)
 
 Looks good. The red points highlight the timepoints used for estimating the growth rate, default minimum value is 5 and can be adjusted by `h` parameter of `all_easylinear()` function. 
 
@@ -176,6 +178,9 @@ For this particular data, the Baranyi & Roberts model is not the best fit (or if
 par(mfrow=c(1, 2))
 plot(mod4, log='y', ylim=c(0.01, 0.64))
 ```
+
+   ![](doc/tasks/growthrates_baranyi.png)
+
 
 And the results can be extracted as before:
 
