--- a/doc/growthrates.Rmd
+++ b/doc/growthrates.Rmd
@@ -53,8 +53,8 @@ sub = bactgrowth %>%
   filter(strain=='D', conc==0)
 ```
 
-The `growthrates` function to estimate growth rate from the linear part of log
-transformed curve is `all_easylinear()`
+The function to estimate growth rate from the linear part of log transformed
+curve is `all_easylinear()`
 
 ```{r}
 mod1 = all_easylinear(
@@ -77,7 +77,7 @@ plot(mod1, log='y')
 
 Looks good. The red points highlight the timepoints used for estimating the growth rate, default minimum value is 5 and can be adjusted by `h` parameter of `all_easylinear()` function. 
 
-You can get the coeficients, most importantly the growth rate `mumax` by the conventional R function `coef()` or by `results()`:
+You can get the coeficients, most importantly the growth rate `mumax`, by the conventional R function `coef()` or by `results()`:
 
 ```{r}
 coef(mod1)
@@ -90,7 +90,7 @@ results(mod1)
 # 2         2 0.014 0.008513917 0.2765472 1.798446 0.9524807
 ```
 
-The latter is preferred as it gives you r^2 and coeficients are organized by
+The latter is preferred as it gives you r^2^ and coeficients are organized by
 the metadata (here, by replicates).
 
 The formula interface allows to expand the model to fit all the strains, at every concentration and replicate as easily as:
@@ -107,7 +107,7 @@ And all the results
 
 ```{r}
 res2 = results(mod2)
-nrow(res2)  # 72
+nrow(res2)  # 3 strains × 12 conc × 2 reps 
 
 # show first six
 head(res2) %>% mutate_if(is.numeric, round, 3)
@@ -172,7 +172,7 @@ mod4 = all_growthmodels(
 
 One should not take it casually which initial parameters are provided. If the starter values are too low, for instance, it is rather easy for the algorithm to arrive at some local minimum. Some trial-and-error here goes a long way: fitting and plotting (preferably many different curves in parallel) to see what works. Don't expect an ideal solution though, find out what works the best and move on.
 
-For this particular data, the Baranyi & Roberts model is not the best fit (or if you find better starting parametes & limits, let me know vvarik.mail@gmail.com). It can prove to be very useful, however, if there are not enough datapoints on the linear part of the exponential growth phase.
+How do the resulting fits look like?
 
 ```{r}
 par(mfrow=c(1, 2))
@@ -181,8 +181,9 @@ plot(mod4, log='y', ylim=c(0.01, 0.64))
 
    ![](doc/tasks/growthrates_baranyi.png)
 
+For this particular data, the Baranyi & Roberts model is not the best fit (or if you find better starting parametes & limits, let me know vvarik.mail@gmail.com). It can prove to be very useful, however, if there are not enough datapoints on the linear part of the exponential growth phase.
 
-And the results can be extracted as before:
+And the parameters can be extracted as before:
 
 ```{r}
 res4 = results(mod4)
